--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+crome-cgg = {path = "../crome-cgg", develop = true}
+crome-contracts = {path = "../crome-contracts", develop = true}
 crome-logic = {path = "../crome-logic", develop = true}
+crome-synthesis = {path = "../crome-synthesis", develop = true}
 isort = "^5.10.1"
 docformatter = "^1.4"
 black = "^22.1.0"
