--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     rev: v2.5.1
     hooks:
       - id: prettier
+        files: "\\.(py)$"
         args: [--prose-wrap=always, --print-width=88]
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.1.0
@@ -43,6 +44,7 @@ repos:
       - id: isort
         name: isort
         entry: isort
+        files: "\\.(py)$"
         args: [--profile=black]
         language: python
       - id: docformatter
@@ -51,6 +53,7 @@ repos:
         language: python
       - id: pyupgrade
         name: pyupgrade
+        files: "\\.(py)$"
         entry: pyupgrade
         language: python
       - id: autoflake
