--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,6 +33,21 @@ repos:
         files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
       - id: trailing-whitespace
         files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v8.14.0"
+    hooks:
+      - id: eslint
+        args: [--fix]
+        additional_dependencies:
+          [
+            "eslint@latest",
+            "eslint-config-react-app@latest",
+            "eslint-plugin-react@latest",
+            "eslint-config-airbnb@latest",
+            "eslint-plugin-react-hooks@latest",
+            "eslint-plugin-jsx-a11y@latest",
+            "eslint-plugin-import@latest",
+          ]
   - repo: local
     hooks:
       - id: black
