--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,6 @@
   "homepage": "https://demos.creative-tim.com/notus-pro-react/",
   "main": "./index.js",
   "dependencies": {
-    "eslint": "^8.14.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.5.0",
-    "eslint-config-react-app": "7.0.1",
     "@fortawesome/fontawesome-free": "5.15.3",
     "@popperjs/core": "2.9.2",
     "@tailwindcss/forms": "0.3.2",
@@ -48,26 +41,7 @@
     "minify:tailwind": "node-sass src/assets/styles/tailwind.css src/assets/styles/tailwind.min.css --output-style compressed"
   },
   "eslintConfig": {
-    "env": {
-      "browser": true,
-      "es2021": true
-    },
-    "extends": [
-      "plugin:react/recommended",
-      "react-app",
-      "airbnb"
-    ],
-    "parserOptions": {
-      "ecmaFeatures": {
-        "jsx": true
-      },
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "plugins": [
-      "react"
-    ],
-    "rules": {}
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
