--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "17.0.2",
     "react-graph-vis": "^1.0.7",
+    "react-loading": "^2.0.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-scrollable-list": "^1.3.1",
     "react-strap": "^0.0.1",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
