--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.2.5",
     "chart.js": "3.1.0",
     "classnames": "2.3.1",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "postcss": "8.2.10",
     "prop-types": "15.7.2",
