--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "5.2.0",
     "react-scrollable-list": "^1.3.1",
     "react-strap": "^0.0.1",
+    "react-tippy": "^1.4.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
     "socket.io-client": "^4.5.0",
