--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "classnames": "2.3.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.6.0",
     "postcss": "8.2.10",
     "prop-types": "15.7.2",
     "react": "17.0.2",
@@ -20,6 +21,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "17.0.2",
     "react-graph-vis": "^1.0.7",
+    "react-lined-textarea": "^1.2.3",
     "react-loading": "^2.0.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
