--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "5.2.0",
     "react-scrollable-list": "^1.3.1",
     "react-strap": "^0.0.1",
+    "react-textarea-autosize": "^8.3.4",
     "react-tippy": "^1.4.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
@@ -72,7 +73,7 @@
     "gh-pages": "3.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "node-sass": "5.0.0",
+    "node-sass": "^7.0.1",
     "prettier": "2.2.1",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "15.4.3"
