--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "postcss": "8.2.10",
+    "prismjs": "^1.28.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-bootstrap-switch": "^15.5.3",
@@ -26,6 +27,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scrollable-list": "^1.3.1",
+    "react-simple-code-editor": "^0.11.2",
     "react-strap": "^0.0.1",
     "react-textarea-autosize": "^8.3.4",
     "react-tippy": "^1.4.0",
