--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "prismjs": "^1.28.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-animated-tree": "^1.0.10",
     "react-bootstrap-switch": "^15.5.3",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "17.0.2",
@@ -26,6 +27,7 @@
     "react-loading": "^2.0.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
+    "react-scroll": "^1.8.7",
     "react-scrollable-list": "^1.3.1",
     "react-simple-code-editor": "^0.11.2",
     "react-strap": "^0.0.1",
