--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "chart.js": "3.1.0",
     "classnames": "2.3.1",
     "file-saver": "^2.0.5",
+    "graphviz-react": "^1.2.0",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "postcss": "8.2.10",
