--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "main": "./index.js",
   "dependencies": {
     "@blueprintjs/core": "^4.4.1",
-    "@fortawesome/fontawesome-free": "@latest",
+    "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.9.2",
     "@tailwindcss/forms": "0.3.2",
     "autoprefixer": "10.2.5",
@@ -85,7 +85,7 @@
     "react-syntax-highlighter": "15.4.3"
   },
   "peerDependencies": {
-    "@fortawesome/fontawesome-free": "@latest",
+    "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.9.2",
     "@tailwindcss/forms": "0.3.2",
     "autoprefixer": "10.2.5",
