--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-graph-vis": "^1.0.7",
     "react-lined-textarea": "^1.2.3",
     "react-loading": "^2.0.3",
+    "react-multilevel-dropdown": "^3.0.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scroll": "^1.8.7",
@@ -80,10 +81,10 @@
     "gh-pages": "3.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "node-sass": "^7.0.1",
     "prettier": "2.2.1",
     "react-scripts": "4.0.3",
-    "react-syntax-highlighter": "15.4.3"
+    "react-syntax-highlighter": "15.4.3",
+    "sass": "^1.52.3"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
