--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,29 +11,20 @@
     "autoprefixer": "10.2.5",
     "chart.js": "3.1.0",
     "classnames": "2.3.1",
+    "depcheck": "^1.4.3",
     "file-saver": "^2.0.5",
-    "graphviz-react": "^1.2.0",
     "html2canvas": "^1.4.1",
-    "jquery": "^3.6.0",
     "postcss": "8.2.10",
-    "prismjs": "^1.28.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
-    "react-animated-tree": "^1.0.10",
     "react-bootstrap-switch": "^15.5.3",
-    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "17.0.2",
     "react-graph-vis": "^1.0.7",
-    "react-lined-textarea": "^1.2.3",
     "react-loading": "^2.0.3",
     "react-multilevel-dropdown": "^3.0.3",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
-    "react-scroll": "^1.8.7",
-    "react-scrollable-list": "^1.3.1",
     "react-simple-code-editor": "^0.11.2",
-    "react-strap": "^0.0.1",
-    "react-textarea-autosize": "^8.3.4",
     "react-tippy": "^1.4.0",
     "react-toastify": "^8.2.0",
     "reactstrap": "^9.0.2",
@@ -52,9 +43,6 @@
     "compile:tailwind": "tailwind build src/assets/styles/index.css -o src/assets/styles/tailwind.css",
     "minify:tailwind": "node-sass src/assets/styles/tailwind.css src/assets/styles/tailwind.min.css --output-style compressed"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -71,18 +59,10 @@
     "typescript": "4.2.4"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.14",
-    "@babel/core": "7.13.15",
-    "@babel/parser": "7.13.15",
-    "@babel/preset-react": "7.13.13",
-    "create-index": "2.6.0",
-    "gh-pages": "3.1.0",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "prettier": "2.2.1",
-    "react-scripts": "4.0.3",
-    "react-syntax-highlighter": "15.4.3",
-    "sass": "^1.52.3"
+    "react-scripts": "4.0.3"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
