--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "postcss": "8.2.10",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-bootstrap-switch": "^15.5.3",
     "react-dom": "17.0.2",
     "react-graph-vis": "^1.0.7",
@@ -58,6 +59,10 @@
   "optionalDependencies": {
     "typescript": "4.2.4"
   },
+    "eslintConfig": {
+    "extends": "react-app"
+  },
+
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
