--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,18 +5,21 @@
   "license": "SEE LICENSE IN <https://www.creative-tim.com/product/notus-pro-react>",
   "main": "./index.js",
   "dependencies": {
+    "@egjs/hammerjs": "^2.0.17",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.5",
     "@tailwindcss/forms": "0.5.2",
     "autoprefixer": "10.4.7",
     "chart.js": "3.8.0",
     "classnames": "2.3.1",
+    "component-emitter": "^1.3.0",
     "depcheck": "^1.4.3",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "keycharm": "^0.4.0",
     "postcss": "8.4.14",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-switch": "^15.5.3",
     "react-dom": "18.2.0",
@@ -31,8 +34,11 @@
     "reactstrap": "^9.0.2",
     "socket.io-client": "^4.5.0",
     "tailwindcss": "3.1.6",
+    "timsort": "^0.3.0",
     "use-file-picker": "^1.4.2",
-    "use-react-screenshot": "^3.0.0"
+    "use-react-screenshot": "^3.0.0",
+    "uuid": "^8.3.2",
+    "vis-util": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,7 +71,7 @@
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "react-scripts": "4.0.3"
+    "react-scripts": "3.4.0"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
