--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "license": "SEE LICENSE IN <https://www.creative-tim.com/product/notus-pro-react>",
   "main": "./index.js",
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@egjs/hammerjs": "^2.0.17",
     "@fortawesome/fontawesome-free": "6.1.1",
     "@popperjs/core": "2.11.5",
@@ -30,7 +32,7 @@
     "react-router-dom": "6.3.0",
     "react-simple-code-editor": "^0.11.2",
     "react-tippy": "^1.4.0",
-    "react-toastify": "^8.2.0",
+    "react-toastify": "^9.0.5",
     "reactstrap": "^9.0.2",
     "socket.io-client": "^4.5.0",
     "tailwindcss": "3.1.6",
@@ -71,7 +73,7 @@
   "devDependencies": {
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "react-scripts": "3.4.0"
+    "react-scripts": "5.0.1"
   },
   "peerDependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
@@ -87,5 +89,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "tailwindcss": "2.1.1"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
