--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     container_name: backend
     volumes:
       - ./frontend/build:/home/crome-web/frontend/build
+      - ../cert.pem:/home/crome-web/cert.pem
+      - ../privkey.pem:/home/crome-web/privkey.pem
     expose:
       - 5000
     ports:
