--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,103 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.0.1
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
-    -   id: check-added-large-files
--   repo: https://github.com/psf/black
-    rev: 21.10b0 # Replace by any tag/version: https://github.com/psf/black/tags
+      - id: end-of-file-fixer
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: check-ast
+      - id: check-builtin-literals
+      - id: check-case-conflict
+      - id: check-docstring-first
+      - id: check-json
+      - id: check-symlinks
+      - id: check-toml
+      - id: check-xml
+      - id: destroyed-symlinks
+      - id: detect-private-key
+      - id: fix-byte-order-marker
+      #      - id: pretty-format-json
+      - id: sort-simple-yaml
+      - id: mixed-line-ending
+        files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
+      - id: trailing-whitespace
+        files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
+
+  - repo: https://github.com/psf/black
+    rev: 22.6.0
     hooks:
-    -   id: black
+      - id: black
         language_version: python3 # Should be a command that runs python3.7+
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910-1
+        types_or: [python, pyi]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.971
     hooks:
-    -   id: mypy
-        exclude: ^(docs/|example-plugin/|tests/fixtures)
--   repo: local
+      - id: mypy
+        exclude: ^(docs/|example-plugin/|tests/fixtures|scripts/|duties.py)
+
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v2.7.1
     hooks:
-      - id: pytest
-        name: Check pytest unit tests pass
-        entry: pdm run duty test
-        pass_filenames: false
-        language: system
-        types: [python]
+      - id: prettier
+        args: [--prose-wrap=always, --print-width=88]
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort (python)
+        language: python
+        files: "\\.(py)$"
+        args: [--profile=black]
+
+  - repo: https://github.com/myint/docformatter
+    rev: v1.4
+    hooks:
+      - id: docformatter
+        args: [--in-place]
+        language: python
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v2.37.3
+    hooks:
+      - id: pyupgrade
+        files: "\\.(py)$"
+        entry: pyupgrade
+        language: python
+
+  - repo: https://github.com/PyCQA/autoflake
+    rev: v1.4
+    hooks:
+      - id: autoflake
+        name: autoflake
+        entry: autoflake
+        language: python
+        require_serial: true
+        args:
+          [
+            --expand-star-imports,
+            --ignore-init-module-imports,
+            --in-place,
+            --remove-all-unused-imports,
+            --remove-duplicate-keys,
+            --remove-unused-variables,
+          ]
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v8.20.0"
+    hooks:
+      - id: eslint
+        args: [--fix]
+        additional_dependencies:
+          [
+            "eslint@latest",
+            "eslint-config-react-app@latest",
+            "eslint-plugin-react@latest",
+            "eslint-config-airbnb@latest",
+            "eslint-plugin-react-hooks@latest",
+            "eslint-plugin-jsx-a11y@latest",
+            "eslint-plugin-import@latest",
+          ]
