--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock|tests/)
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -18,11 +19,11 @@ repos:
       - id: destroyed-symlinks
       - id: detect-private-key
       - id: fix-byte-order-marker
-      #      - id: pretty-format-json
       - id: sort-simple-yaml
       - id: mixed-line-ending
         files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
       - id: trailing-whitespace
+        #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
         files: "\\.(py|txt|yaml|json|md|toml|lock|cfg|html|sh|js|yml)$"
 
   - repo: https://github.com/psf/black
@@ -31,18 +32,20 @@ repos:
       - id: black
         language_version: python3 # Should be a command that runs python3.7+
         types_or: [python, pyi]
+  #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.971
     hooks:
       - id: mypy
-        exclude: ^(docs/|example-plugin/|tests/fixtures|scripts/|duties.py)
+  #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.7.1
     hooks:
       - id: prettier
         args: [--prose-wrap=always, --print-width=88]
+  #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
 
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
@@ -50,6 +53,7 @@ repos:
       - id: isort
         name: isort (python)
         language: python
+        #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
         files: "\\.(py)$"
         args: [--profile=black]
 
@@ -91,6 +95,7 @@ repos:
     hooks:
       - id: eslint
         args: [--fix]
+        #        exclude: ^(src/backend/output/|docs/|example-plugin/|tests/fixtures|scripts/|duties.py|yarn.lock)
         additional_dependencies:
           [
             "eslint@latest",
