--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -4,7 +4,7 @@ _src_path: https://github.com/pawamoy/copier-pdm.git
 author_email: piergiuseppe.mallozzi@gmail.com
 author_fullname: Piergiuseppe Mallozzi
 author_username: pierg
-copyright_date: '2022'
+copyright_date: "2022"
 copyright_holder: Piergiuseppe Mallozzi
 copyright_holder_email: piergiuseppe.mallozzi@gmail.com
 copyright_license: MIT License
@@ -17,4 +17,3 @@ repository_name: crome-web
 repository_namespace: pierg
 repository_provider: github.com
 use_precommit: true
-
