change file for the server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: backend
     volumes:
       - ./src/frontend/build:/home/crome-web/src/frontend/build
-      - ../cert.pem:/home/cert.pem
-      - ../privkey.pem:/home/privkey.pem
+      - ../cert.pem:/home/crome-web/cert.pem
+      - ../privkey.pem:/home/crome-web/privkey.pem
     expose:
       - 5000
     ports:
