fix missing imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "crome-contracts @ file:///${PROJECT_ROOT}/crome_contracts",
     "crome-logic @ file:///${PROJECT_ROOT}/crome_logic",
     "crome-synthesis @ file:///${PROJECT_ROOT}/crome_synthesis",
+    "flask>=2.2.2",
+    "flask-socketio>=5.3.0",
 ]
 requires-python = ">=3.9,<3.11"
 license = {text = "MIT"}
